Center alignment finally fixed
Fixed the alignment of all the bullet points and numbers

--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -19,7 +19,6 @@
 .flex {
   display: flex;
   justify-content: center;
-  align-items: center;
   text-align: left;
 }
 
